==> PRTechTalk/RenesasRA/SPI OLED RA2L1/SSD1331.c <==
#include "hal_data.h"
#include "stdio.h"
#include "SSD1331.h"
#include "common_utils.h"
#include "img.h"

void _sendCmd(uint8_t c)
{
    // DC Low
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_LOW);

    // CS Low
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);

    _sendData(c);

    // CS High
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_HIGH);
}

void _sendData(uint8_t c) {

    sendBuff[0] = c;
    g_master_event_flag = RESET_VALUE;

    err = R_SCI_SPI_Write(&g_spi0_ctrl, &sendBuff[0], sizeof(sendBuff), SPI_BIT_WIDTH_8_BITS);
    if (FSP_SUCCESS != err)
            {
                APP_ERR_PRINT("\r\n SCI_SPI Write failed");
                APP_ERR_TRAP(err);
            }
    while(SPI_EVENT_TRANSFER_COMPLETE != g_master_event_flag){
    }
}

void SSD1331_init(void)
{

    err = R_SCI_SPI_Open(&g_spi0_ctrl, &g_spi0_cfg);
    if (FSP_SUCCESS != err)
        {
            APP_ERR_PRINT("\r\n SCI_SPI open failed");
            APP_ERR_TRAP(err);
        }



    // Power up and reset sequence
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);

    // 1. Bring DC Pin 7 Low
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_LOW);

    // 2.Bring Reset Pin 8 High
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_RST, BSP_IO_LEVEL_HIGH);

    // 3. Bring VCCEN pin 9 Low
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_VCCEN, BSP_IO_LEVEL_LOW);

    // 4. PMODEN High Pin 10 and delay 20ms
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_PMODEN, BSP_IO_LEVEL_HIGH);
    R_BSP_SoftwareDelay(20, BSP_DELAY_UNITS_MILLISECONDS);

    // 5.Bring Reset Pin 8 Low and delay 5us then back to High
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_RST, BSP_IO_LEVEL_LOW);
    R_BSP_SoftwareDelay(5, BSP_DELAY_UNITS_MICROSECONDS);
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_RST, BSP_IO_LEVEL_HIGH);

    //6. Wait 5us for reset to complete
    R_BSP_SoftwareDelay(5, BSP_DELAY_UNITS_MICROSECONDS);

    // Power up Done Continue Init Sequence


    _sendData(0xFD);                     //Enable
    _sendData(0x12);

    _sendData(CMD_DISPLAY_OFF);          //Display Of

    _sendData(CMD_SET_REMAP);            //set remap & data format
    _sendData(0x72);                     //0x72

    _sendData(CMD_SET_DISPLAY_START_LINE);//Set display Start Line
    _sendData(0x0);

    _sendData(CMD_SET_DISPLAY_OFFSET);   //Set display offset
    _sendData(0x0);

    _sendData(CMD_NORMAL_DISPLAY);       //Set display mode

    _sendData(CMD_SET_MULTIPLEX_RATIO);  //Set multiplex ratio
    _sendData(0x3F);

    _sendData(CMD_SET_MASTER_CONFIGURE); //Set master configuration
    _sendData(0x8E);

    _sendData(CMD_POWER_SAVE_MODE);      //Set Power Save Mode
    _sendData(0x0B);                     //0x0B

    _sendData(CMD_PHASE_PERIOD_ADJUSTMENT);       //phase 1 and 2 period adjustment
    _sendData(0x31);                              //0x31

    _sendData(CMD_DISPLAY_CLOCK_DIV);    //display clock divider/oscillator frequency
    _sendData(0xF0);

    _sendData(CMD_SET_PRECHARGE_SPEED_A);//Set Second Pre-change Speed For ColorA
    _sendData(0x64);                     //100

    _sendData(CMD_SET_PRECHARGE_SPEED_B);//Set Second Pre-change Speed For ColorB
    _sendData(0x78);                     //120

    _sendData(CMD_SET_PRECHARGE_SPEED_C);//Set Second Pre-change Speed For ColorC
    _sendData(0x64);                     //100

    _sendData(CMD_SET_PRECHARGE_VOLTAGE);//Set Pre-Change Level
    _sendData(0x3A);

    _sendData(CMD_SET_V_VOLTAGE);        //Set vcomH
    _sendData(0x3E);

    _sendData(CMD_MASTER_CURRENT_CONTROL);//master current control
    _sendData(0x06);                     //6

    _sendData(CMD_SET_CONTRAST_A);       //Set contrast for color A
    _sendData(0x91);                     //145 (0x91)

    _sendData(CMD_SET_CONTRAST_B);       //Set contrast for color B
    _sendData(0x50);                     //80 (0x50)

    _sendData(CMD_SET_CONTRAST_C);       //Set contrast for color C
    _sendData(0x7D);                     //125 (0x7D)

    _sendData(CMD_DEACTIVE_SCROLLING);   //disable scrolling

    _sendData(CMD_CLEAR_WINDOW);
    _sendData(0x00);                     // Set the starting column coordinates
    _sendData(0x00);                     // Set the starting row coordinates
    _sendData(0x5F);                     // Set the finishing column coordinates
    _sendData(0x3F);                     // Set the finishing row coordinates

    //29. VCCEN pin 9 High wait 25ms
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_VCCEN, BSP_IO_LEVEL_HIGH);
    R_BSP_SoftwareDelay(25, BSP_DELAY_UNITS_MILLISECONDS);

    //30. Turn on Display and wait 100ms
    _sendData(0xAF);
    R_BSP_SoftwareDelay(100, BSP_DELAY_UNITS_MILLISECONDS);

}

void SSD1331_drawPixel(uint16_t x, uint16_t y, uint16_t color)
{
    if ((x < 0) || (x >= RGB_OLED_WIDTH) || (y < 0) || (y >= RGB_OLED_HEIGHT))
        return;
    //set column point
    _sendCmd(CMD_SET_COLUMN_ADDRESS);
    _sendCmd(x);
    _sendCmd(RGB_OLED_WIDTH-1);
    //set row point
    _sendCmd(CMD_SET_ROW_ADDRESS);
    _sendCmd(y);
    _sendCmd(RGB_OLED_HEIGHT-1);

    //GPIO_SetBits(GPIOB, GPIO_Pin_0); //dc
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_HIGH);


    //GPIO_ResetBits(GPIOB, GPIO_Pin_1); //cs
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);


    _sendData(color >> 8);
    _sendData(color);

    //GPIO_SetBits(GPIOB, GPIO_Pin_1); //cs
    R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_HIGH);
}

void SSD1331_Chr(LcdFontSize size, unsigned char ch, uint16_t chr_color, uint16_t bg_color) {
    unsigned char y, x, sx, sy;
    uint16_t color;
    /////uint16_t cx=CHR_X*6*size;
    uint16_t cx=CHR_X;
    /////uint16_t cy=CHR_Y*8*size;
    uint16_t cy=CHR_Y;

    if ( (cx + 6*size > RGB_OLED_WIDTH) || (cy + 8*size > RGB_OLED_HEIGHT) ) {
        return;
    }

    // CHR
    if ( (ch >= 0x20) && (ch <= 0x7F) )
    {
        // offset in symbols table ASCII[0x20-0x7F]
        ch -= 32;
    }
    else if (ch >= 0xC0)
    {
        // offset in symbols table CP1251[0xC0-0xFF] (Cyrillic)
        ch -= 96;
    }
    else
    {
        // Ignore unknown symbols
        ch = 95;
    }

    if ((size > FONT_1X) & (ch > 15) & (ch < 26)) {
        ch -= 16;
        for (sy = 0; sy<size; sy++) {
        for (y = 0; y<8; y++ ) {
            //set column point
            _sendCmd(CMD_SET_COLUMN_ADDRESS);
            _sendCmd(cx);
            _sendCmd(RGB_OLED_WIDTH-1);
            //set row point
            _sendCmd(CMD_SET_ROW_ADDRESS);
            _sendCmd(y + cy + sy*8);
            _sendCmd(RGB_OLED_HEIGHT-1);
            //GPIO_SetBits(GPIOB, GPIO_Pin_0); //dc
            R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_HIGH);

            //GPIO_ResetBits(GPIOB, GPIO_Pin_1); //cs
            R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);

            for (x = 0; x < 5*size; x++ ) {
                if ( (((BigNumbers[ch][x+sy*10] >> y) & 0x01 ) & (size == FONT_2X)) |
                     (((LargeNumbers[ch][x+sy*20] >> y) & 0x01 ) & (size == FONT_4X))

                    ) {
                    color = chr_color;
                }
                else {
                    color = bg_color;
                }
                _sendData(color >> 8);
                _sendData(color);
            }
        }
        }
    }
    else {
        for (y = 0; y<8; y++ ) {
            for (sy = 0; sy<size; sy++ ) {
                //set column point
                _sendCmd(CMD_SET_COLUMN_ADDRESS);
                _sendCmd(cx);
                _sendCmd(RGB_OLED_WIDTH-1);
                //set row point
                _sendCmd(CMD_SET_ROW_ADDRESS);
                _sendCmd(y*size + sy + cy);
                _sendCmd(RGB_OLED_HEIGHT-1);

                //GPIO_SetBits(GPIOB, GPIO_Pin_0); //dc
                R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_HIGH);

                //GPIO_ResetBits(GPIOB, GPIO_Pin_1); //cs
                R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);

                for (x = 0; x<5; x++ ) {
                    if ((FontLookup[ch][x] >> y) & 0x01) {
                        color = chr_color;
                    }
                    else {
                        color = bg_color;
                    }
                    //SSD1331_drawPixel(x+cx, y+cy, color);
                    for (sx = 0; sx<size; sx++ ) {
                        _sendData(color >> 8);
                        _sendData(color);
                    }
                }
                _sendData(bg_color >> 8);
                _sendData(bg_color);

                //GPIO_SetBits(GPIOB, GPIO_Pin_1); //cs
                R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_HIGH);


            }
        }
    }

    /////CHR_X++;
    //CHR_X += 6*size;
}

void SSD1331_IMG(const unsigned char *img, uint16_t x, uint16_t y, uint16_t width, uint16_t height) {
    uint16_t xx, yy;

    if ( (x + width > RGB_OLED_WIDTH) | (y+height > RGB_OLED_HEIGHT) ){
        return;
    }

    for (yy=0; yy<height; yy++) {
        //set column point
        _sendCmd(CMD_SET_COLUMN_ADDRESS);
        _sendCmd(x);
        _sendCmd(RGB_OLED_WIDTH-1);
        //set row point
        _sendCmd(CMD_SET_ROW_ADDRESS);
        _sendCmd(y + yy);
        _sendCmd(RGB_OLED_HEIGHT-1);

        //GPIO_SetBits(GPIOB, GPIO_Pin_0); //dc
        R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_DC, BSP_IO_LEVEL_HIGH);

        //GPIO_ResetBits(GPIOB, GPIO_Pin_1); //cs
        R_IOPORT_PinWrite(&g_ioport_ctrl, PMOD2_CS, BSP_IO_LEVEL_LOW);


        for (xx=0; xx<width*2; xx++) {
            _sendData(img[yy*width*2 + xx]);
        }
    }
}
